2004-09-11  Sebastien Pouliot  <sebastien@ximian.com>

	* EventLogPermissionTest.cs: New. Unit tests for EventLogPermission.
	* PerformanceCounterPermissionTest.cs: New. Unit tests for 
	PerformanceCounterPermission.

2004-09-10  Sebastien Pouliot  <sebastien@ximian.com>

	* EventLogPermissionAttributeTest.cs: New. Unit tests for 
	EventLogPermissionAttribute.
	* PerformanceCounterPermissionAttributeTest.cs: New. Unit tests for 
	PerformanceCounterPermissionAttribute.

2004-02-05  Nick Drochak <ndrochak@gol.com>

	* DiagnosticsConfigurationHandlerTest.cs: Ignore tests using classes not 
	meant to be used directly.

2003-12-30  Nick Drochak <ndrochak@gol.com>

	* DiagnosticsConfigurationHandlerTest.cs: Inherit from Assertion to
	make it a bit simpler.
	* SwitchesTest.cs: Make the tests pass on .NET 1.1

2003-03-25  Nick Drochak <ndrochak@gol.com>

	* DiagnosticsConfigurationHandlerTest.cs: Fix compiler warnings

2002-12-20  Jonathan Pryor <jonpryor@vt.edu>

	* AllTests.cs: Add new tests
	* SwitchesTest.cs: new file to test switches
	* DiagnosticsConfigurationHandlerTest.cs: new file to test
	  DiagnosticsConfigurationHandler
	* TraceTest.cs: Make sure that IndentLevel and IndentSize are set
    appropriately before testing output.

2002-09-23  Nick Drochak  <ndrochak@gol.com>

	* TraceTest.cs: Default level and size are 0 & 4, respectively.

2002-09-19  Nick Drochak  <ndrochak@gol.com>

	* TraceTest.cs: Clear list of listeners before each test.

2002-09-17  Nick Drochak  <ndrochak@gol.com>

	* TraceTest.cs: Remove extraneous Console.WriteLine().

2002-06-16  Jonathan Pryor  <jonpryor@vt.edu>
	* TraceTest.cs: Added additional test cases.

2002-04-07  Jonathan Pryor  <jonpryor@vt.edu>

	* TraceTest.cs: Removed extraneous output; renamed test case so that NUnit
	  would find it.

2002-03-10  Jonathan Pryor  <jonpryor@vt.edu>

	* Initial creation of System.Diagnostics test directory
	* AllTests.cs: file added
	* TraceTest.cs: Test System.Diagnostics.Trace class
