@@ -1,3 +1,8 @@
+2005-01-08  Nick Drochak  <ndrochak@ieee.org>
+
+	* EventLogPermissionTest.cs
+	* PerformanceCounterPermissionTest.cs: Make tests pass on MS.NET.
+
 2004-09-11  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* EventLogPermissionTest.cs: New. Unit tests for EventLogPermission.
